--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Seeker
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,8 @@
 <ion-content [fullscreen]="true">
   
 
-  
+  <ion-button  type="submit"(click)="goToOpportunities()"  shape="round" style="color:white" expand="block"> Select Preferences</ion-button>
 
-    Welcome to Seeker
 
 
 </ion-content>
