--- a/src/app/pages/addjob/addjob.page.html
+++ b/src/app/pages/addjob/addjob.page.html
@@ -16,11 +16,11 @@
           <ion-select-option  value="3">painter</ion-select-option>     
         </ion-select>
       </ion-item>
-        <!-- <ion-item>
+        <ion-item>
           <ion-label position="floating">Job Title</ion-label>
           <ion-input type="text" ngModel  name="name"  placeholder="Job Title"></ion-input>
         </ion-item>
-        <br/> -->
+        <br/>
 
         <ion-item>
           <ion-label position="floating"> Job Description</ion-label>
@@ -40,6 +40,12 @@
         </ion-item>
         <br/>
         
+        <ion-item>
+          <ion-label position="floating">Company</ion-label>
+          <ion-input type="email" ngModel name="company"  placeholder="Who is hiring"></ion-input>
+      </ion-item>
+      <br/>
+      
   
         <!-- <ion-item>
             <ion-label position="floating">Job Details</ion-label>
