--- a/src/app/pages/myapplications/myapplications.page.html
+++ b/src/app/pages/myapplications/myapplications.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar  color="primary" >
+  <ion-toolbar  color="favorite" >
     <ion-title> My Applications </ion-title>
     <ion-buttons (click)="goToOpportunities()" slot="primary">
         <ion-button  >
