--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -1,9 +1,302 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Profile</ion-title>
+  <ion-toolbar color="favorite">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref=""></ion-back-button>
+    </ion-buttons>
+    <ion-title class="title"> <span style="color:#1f8611;"> My Profile</span></ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
+  <ion-card>
+    <ion-card-header class="card-head">
+      <!-- <img [src]="shop.img" height="200px" style="width: 100%" alt=""  /> -->
+      <div class="floatingbtn">
+        <ion-button class="title"   shape="round" style="color:white" (onClick)="gotoAddProfile()" >add Profile</ion-button>
 
-</ion-content>
+        <!-- <ion-icon
+          style="position: relative; color:white; font-size: 35px;"
+          name="add"
+        ></ion-icon> -->
+      </div>
+      <ion-card class="floatingbn">
+        <ion-card-content>
+        </ion-card-content>
+      </ion-card>
+    </ion-card-header>
+    <br />
+
+    <ion-card-content>
+      <ion-list lines="none">
+        <ion-item>
+          <ion-label>
+            <h2>Name</h2>
+            <!-- <p>Emmilly</p> -->
+            <p>{{user.name}}</p>
+          </ion-label>
+          <ion-icon
+            slot="end"
+            name="home"
+          ></ion-icon>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>
+            <h2></h2>
+            <!-- <p>Emmilly</p> -->
+
+            <p text-wrap>{{user.uid}}</p>
+          </ion-label>
+          <ion-icon
+            slot="end"
+            name="pin"
+          ></ion-icon>
+        </ion-item>
+
+        <ion-item >
+          <ion-label>
+            <h2>Phone Number</h2>
+            <!-- <p>Emmilly</p> -->
+
+            <p>{{user.phone}}</p>
+          </ion-label>
+          <ion-icon
+            slot="end"
+            name="call"
+          ></ion-icon>
+        </ion-item>
+
+        <ion-item >
+          <ion-label>
+            <h2>Email Address</h2>
+            <!-- <p>Emmilly</p> -->
+
+            <p>{{user.address}}</p>
+          </ion-label>
+          <ion-icon 
+            slot="end"
+            name="mail"
+          ></ion-icon>
+        </ion-item>
+
+        <ion-item >
+          <ion-label>
+            <h2>Age</h2>
+            <!-- <p>Emmilly</p> -->
+
+            <p>{{user.age}}</p>
+          </ion-label>
+          <ion-icon 
+            slot="end"
+            name="mail"
+          ></ion-icon>
+        </ion-item>
+
+        <ion-item >
+          <ion-label>
+            <h2>Sex</h2>
+            <!-- <p>Emmilly</p> -->
+
+            <p>{{user.sex}}</p>
+          </ion-label>
+          <ion-icon 
+            slot="end"
+            name="mail"
+          ></ion-icon>
+        </ion-item>
+
+        <ion-item >
+          <ion-label>
+            <h2>Nationality</h2>
+            <!-- <p>Emmilly</p> -->
+
+            <p>{{user.nationality}}</p>
+          </ion-label>
+          <ion-icon 
+            slot="end"
+            name="mail"
+          ></ion-icon>
+        </ion-item>
+
+        <ion-item >
+          <ion-label>
+            <h2>Linked In Profile</h2>
+            <!-- <p>Emmilly</p> -->
+
+            <p>{{user.linkedIn}}</p>
+          </ion-label>
+          <ion-icon 
+            slot="end"
+            name="mail"
+          ></ion-icon>
+        </ion-item>
+
+        <ion-item >
+          <ion-label>
+            <h2>Email Address</h2>
+            <!-- <p>Emmilly</p> -->
+
+            <p>{{user.email}}</p>
+          </ion-label>
+          <ion-icon 
+            slot="end"
+            name="mail"
+          ></ion-icon>
+        </ion-item>
+
+        <ion-item >
+          <ion-label>
+            <h2>Email Address</h2>
+            <!-- <p>Emmilly</p> -->
+
+            <p>{{user.email}}</p>
+          </ion-label>
+          <ion-icon 
+            slot="end"
+            name="mail"
+          ></ion-icon>
+        </ion-item>
+
+        <ion-item >
+          <ion-label>
+            <h2>Email Address</h2>
+            <!-- <p>Emmilly</p> -->
+
+            <p>{{user.email}}</p>
+          </ion-label>
+          <ion-icon 
+            slot="end"
+            name="mail"
+          ></ion-icon>
+        </ion-item>
+
+        <ion-item >
+          <ion-label>
+            <h2>Email Address</h2>
+            <!-- <p>Emmilly</p> -->
+
+            <p>{{user.email}}</p>
+          </ion-label>
+          <ion-icon 
+            slot="end"
+            name="mail"
+          ></ion-icon>
+        </ion-item>
+
+        <ion-item >
+          <ion-label>
+            <h2>Email Address</h2>
+            <!-- <p>Emmilly</p> -->
+
+            <p>{{user.email}}</p>
+          </ion-label>
+          <ion-icon 
+            slot="end"
+            name="mail"
+          ></ion-icon>
+        </ion-item>
+
+        <ion-item >
+          <ion-label>
+            <h2>Email Address</h2>
+            <!-- <p>Emmilly</p> -->
+
+            <p>{{user.email}}</p>
+          </ion-label>
+          <ion-icon 
+            slot="end"
+            name="mail"
+          ></ion-icon>
+        </ion-item>
+
+        <ion-item >
+          <ion-label>
+            <h2>Email Address</h2>
+            <!-- <p>Emmilly</p> -->
+
+            <p>{{user.email}}</p>
+          </ion-label>
+          <ion-icon 
+            slot="end"
+            name="mail"
+          ></ion-icon>
+        </ion-item>
+
+        <ion-item >
+          <ion-label>
+            <h2>Email Address</h2>
+            <!-- <p>Emmilly</p> -->
+
+            <p>{{user.email}}</p>
+          </ion-label>
+          <ion-icon 
+            slot="end"
+            name="mail"
+          ></ion-icon>
+        </ion-item>
+
+        <ion-item >
+          <ion-label>
+            <h2>Email Address</h2>
+            <!-- <p>Emmilly</p> -->
+
+            <p>{{user.email}}</p>
+          </ion-label>
+          <ion-icon 
+            slot="end"
+            name="mail"
+          ></ion-icon>
+        </ion-item>
+
+        <ion-item >
+          <ion-label>
+            <h2>Email Address</h2>
+            <!-- <p>Emmilly</p> -->
+
+            <p>{{user.email}}</p>
+          </ion-label>
+          <ion-icon 
+            slot="end"
+            name="mail"
+          ></ion-icon>
+        </ion-item>
+
+        <ion-item >
+          <ion-label>
+            <h2>Email Address</h2>
+            <!-- <p>Emmilly</p> -->
+
+            <p>{{user.email}}</p>
+          </ion-label>
+          <ion-icon 
+            slot="end"
+            name="mail"
+          ></ion-icon>
+        </ion-item>
+
+        <ion-item >
+          <ion-label>
+            <h2>Email Address</h2>
+            <!-- <p>Emmilly</p> -->
+
+            <p>{{user.email}}</p>
+          </ion-label>
+          <ion-icon 
+            slot="end"
+            name="mail"
+          ></ion-icon>
+        </ion-item>
+
+        
+        
+    
+
+      </ion-list>
+     
+    
+           
+            
+    
+    </ion-card-content>
+  </ion-card>  
+
+  </ion-content>
