--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -12,8 +12,8 @@
     <ion-list class="form">   
       
       <ion-item>
-        <ion-icon name="person-outline"></ion-icon>
-        <ion-input type="text"  name="name"  placeholder="Full name" required ></ion-input>
+        <ion-icon name="person-outline">Full Name</ion-icon>
+        <ion-input type="text" ngModel  name="name"  placeholder="Full name" required ></ion-input>
       </ion-item>
 
       <ion-item>
