--- a/src/app/pages/addjob/addjob.page.scss
+++ b/src/app/pages/addjob/addjob.page.scss
@@ -2,3 +2,12 @@ ion-content{
     padding: 20px;
     border-radius: 20%;
 }
+.title{
+    font-family: cursive;
+    font-size: larger;
+    --background: green;
+    color:#1f8611;
+}
+.word-color{
+    color:green;
+}
