--- a/src/app/pages/addprofile/addprofile.page.scss
+++ b/src/app/pages/addprofile/addprofile.page.scss
@@ -1,6 +1,7 @@
 .card-head{
     padding: 0px;
     position: relative !important;
+    color:green;
 
 }
 
@@ -50,6 +51,9 @@
     color: white;
     left: 85px;
 
+}
+.background{
+    background-color:#33cccc ;
 }
 .title{
     font-family: cursive;
