--- a/src/app/pages/job-detail/job-detail.page.scss
+++ b/src/app/pages/job-detail/job-detail.page.scss
@@ -32,6 +32,8 @@
         font-family: cursive;
         font-size: larger;
         --background: green;
+        color:#1f8611;
+
     }
   
   .card-subtitle {
