--- a/src/app/pages/job/job.page.html
+++ b/src/app/pages/job/job.page.html
@@ -8,10 +8,10 @@
       <ion-icon name="logo-buffer"></ion-icon>
       <ion-label>Applicants</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="confirmed">
+    <!-- <ion-tab-button tab="confirmed">
         <ion-icon name="images"></ion-icon>
         <ion-label>Confirmed</ion-label>
-    </ion-tab-button>
+    </ion-tab-button> -->
 
      
   </ion-tab-bar>
