--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -55,4 +55,8 @@
     font-family: cursive;
     font-size: larger;
     --background: green;
+    color:#1f8611;
+}
+.word-color{
+    color:green;
 }
