--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,113 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu menuId="main-menu" content-id="main">
+    <ion-header>
+      <ion-toolbar  color="favorite">
+        <ion-title class="title">
+          Menu
+        </ion-title>
+      </ion-toolbar>
+    </ion-header>
+  <ion-content>
+    <ion-list>
+      <ion-menu-toggle>
+        <ion-item routerLink="/profile">
+          <ion-icon  name="mail" slot="start">   </ion-icon>
+       
+           <ion-label >Profile</ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+
+      <ion-menu-toggle>
+        <ion-item routerLink="/profile">
+          <ion-icon  name="mail" slot="start">   </ion-icon>
+       
+           <ion-label >Profile</ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+
+
+      <ion-menu-toggle>
+        <ion-item routerLink="/profile">
+          <ion-icon  name="mail" slot="start">   </ion-icon>
+       
+           <ion-label >Profile</ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+
+
+      <ion-menu-toggle>
+        <ion-item routerLink="/jobs">
+          <ion-icon  name="mail" slot="start">   </ion-icon>
+       
+           <ion-label >Jobs</ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+
+
+      <ion-menu-toggle>
+        <ion-item routerLink="/addjob">
+          <ion-icon  name="add" slot="start">   </ion-icon>
+       
+           <ion-label >Add Job</ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+
+
+      <ion-menu-toggle>
+        <ion-item routerLink="/myapplicantions">
+          <ion-icon  name="mail" slot="start">   </ion-icon>
+       
+           <ion-label >Aplicantions</ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+
+
+      <ion-menu-toggle>
+        <ion-item routerLink="/profile">
+          <ion-icon  name="mail" slot="start">   </ion-icon>
+       
+           <ion-label >Profile</ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+
+
+      <ion-menu-toggle>
+        <ion-item routerLink="/profile">
+          <ion-icon  name="mail" slot="start">   </ion-icon>
+       
+           <ion-label >Profile</ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+
+
+      <ion-menu-toggle>
+        <ion-item routerLink="/opportunities">
+          <ion-icon  name="mail" slot="start">   </ion-icon>
+       
+           <ion-label >Opportunities</ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+
+
+      <ion-menu-toggle>
+        <ion-item routerLink="/preferences">
+          <ion-icon  name="heart" slot="start">   </ion-icon>
+       
+           <ion-label >Preferences</ion-label>
+        </ion-item>
+      </ion-menu-toggle>      
+
+      <ion-menu-toggle>
+        <ion-item routerLink="/profile">
+          <ion-icon  name="person-outline" slot="start">   </ion-icon>
+       
+           <ion-label >Profile</ion-label>
+        </ion-item>
+      </ion-menu-toggle>     
+      
+</ion-list>
+</ion-content>
+</ion-menu>
+
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
