--- a/src/app/pages/addjob/addjob.page.html
+++ b/src/app/pages/addjob/addjob.page.html
@@ -1,6 +1,10 @@
 <ion-header>
-  <ion-toolbar color="primary">
-    <ion-title>Add Job</ion-title>
+  <ion-toolbar color="favorite">
+    <ion-buttons slot="start">
+      <ion-menu-button menu="main-menu">
+      </ion-menu-button>
+        </ion-buttons>
+    <ion-title class="title"> <span style="color:#1f8611;"> Add Job</span></ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -8,43 +12,55 @@
   
   <form #form="ngForm" (ngSubmit)="addJob(form)" >
     <ion-list>
+      <ion-card>
       <ion-item>
-        <ion-label position="floating">Job Type</ion-label>
+        <ion-label position="floating" class="word-color">Job Type</ion-label>
         <ion-select ngModel  name="jobId" required>
           <ion-select-option  value="1">Software Developer</ion-select-option>
           <ion-select-option  value="2">Nurse</ion-select-option>
           <ion-select-option  value="3">painter</ion-select-option>     
         </ion-select>
       </ion-item>
+    </ion-card>
+    <ion-card>
+
         <ion-item>
-          <ion-label position="floating">Job Title</ion-label>
+          <ion-label position="floating" class="word-color">Job Title</ion-label>
           <ion-input type="text" ngModel  name="name"  placeholder="Job Title"></ion-input>
         </ion-item>
-        <br/>
+      </ion-card>
+      
+      <ion-card>
 
         <ion-item>
-          <ion-label position="floating"> Job Description</ion-label>
+          <ion-label position="floating" class="word-color"> Job Description</ion-label>
           <ion-textarea  ngModel name="description" required ></ion-textarea>
         </ion-item>
-        <br/>
+      </ion-card>
+
+      <ion-card>
 
         <ion-item>
-          <ion-label position="floating">Phone Number</ion-label>
+          <ion-label position="floating" class="word-color">Phone Number</ion-label>
           <ion-input type="tel" ngModel  name="phone"  placeholder="+256"></ion-input>
         </ion-item>
-        <br/>
+      </ion-card>
+
+      <ion-card>
 
         <ion-item>
-            <ion-label position="floating">Email Address</ion-label>
+            <ion-label position="floating" class="word-color">Email Address</ion-label>
             <ion-input type="email" ngModel name="email"  placeholder="example@gmail.com"></ion-input>
         </ion-item>
-        <br/>
-        
+      </ion-card>
+
+            <ion-card>
+  
         <ion-item>
-          <ion-label position="floating">Company</ion-label>
+          <ion-label position="floating" class="word-color">Company</ion-label>
           <ion-input type="email" ngModel name="company"  placeholder="Who is hiring"></ion-input>
       </ion-item>
-      <br/>
+    </ion-card>
       
   
         <!-- <ion-item>
@@ -56,10 +72,11 @@
           />
           <label for="file"><ion-icon name="images"></ion-icon> Select </label>        </ion-item>
         <br/> -->
+        <ion-card>
 
         <ion-row>
           <ion-col size="10">
-            <ion-label position="floating">Job Details</ion-label>
+            <ion-label position="floating" class="word-color">Job Details</ion-label>
 
               <ion-item>
                   <input
@@ -71,10 +88,11 @@
                 </ion-item>
           </ion-col>
         </ion-row>
-        
+      </ion-card>
+
         
      
     </ion-list>
-    <ion-button  type="submit"  shape="round" style="color:white" expand="block">{{btnText}}</ion-button>
+    <ion-button class="title" type="submit"  shape="block" style="color:white" expand="block">{{btnText}}</ion-button>
   </form>
 </ion-content>
