--- a/src/app/pages/jobs/jobs.page.html
+++ b/src/app/pages/jobs/jobs.page.html
@@ -1,10 +1,7 @@
 <ion-header>
   
-  <ion-toolbar color="favorite">
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
-    <ion-title class="title"> Opportunities</ion-title>
+  <ion-toolbar color="favorite">    
+    <ion-title class="title"> My Jobs</ion-title>
     <ion-buttons slot="start">
       <ion-menu-button menu="main-menu">
       </ion-menu-button>
