--- a/src/app/pages/preferences/preferences.page.scss
+++ b/src/app/pages/preferences/preferences.page.scss
@@ -1,6 +1,18 @@
 #prefs{
     padding: 20px;
+    margin-left: 30px;
     background: #ebfafa;
-    
+   
 
+}
+.title{
+    font-family: cursive;
+    font-size: larger;
+    color:#1f8611;
+    --background: green;
+
+
+}
+.small{
+    margin:0px;
 }
