--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="favorite">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref=""></ion-back-button>
+      <ion-menu-button menu="main-menu"></ion-menu-button>
     </ion-buttons>
     <ion-title class="title"> <span style="color:#1f8611;"> My Profile</span></ion-title>
   </ion-toolbar>
@@ -11,12 +11,12 @@
     <ion-card-header class="card-head">
       <!-- <img [src]="shop.img" height="200px" style="width: 100%" alt=""  /> -->
       <div class="floatingbtn">
-        <ion-button class="title"   shape="round" style="color:white" (onClick)="gotoAddProfile()" >add Profile</ion-button>
+        <!-- <ion-button class="title"   shape="round" style="color:white" (onClick)="gotoAddProfile()" >add Profile</ion-button> -->
 
-        <!-- <ion-icon
+        <ion-icon routerLink="/addprofile"
           style="position: relative; color:white; font-size: 35px;"
           name="add"
-        ></ion-icon> -->
+        ></ion-icon>
       </div>
       <ion-card class="floatingbn">
         <ion-card-content>
@@ -29,9 +29,9 @@
       <ion-list lines="none">
         <ion-item>
           <ion-label>
-            <h2>Name</h2>
+            <h2 class="word-color">Name</h2>
             <!-- <p>Emmilly</p> -->
-            <p>{{user.name}}</p>
+            <p >{{user.name}}</p>
           </ion-label>
           <ion-icon
             slot="end"
@@ -41,10 +41,10 @@
 
         <ion-item>
           <ion-label>
-            <h2></h2>
+            <h2 class="word-color">Location</h2>
             <!-- <p>Emmilly</p> -->
 
-            <p text-wrap>{{user.uid}}</p>
+            <p text-wrap>{{user.address}}</p>
           </ion-label>
           <ion-icon
             slot="end"
@@ -54,7 +54,7 @@
 
         <ion-item >
           <ion-label>
-            <h2>Phone Number</h2>
+            <h2 class="word-color">Phone Number</h2>
             <!-- <p>Emmilly</p> -->
 
             <p>{{user.phone}}</p>
@@ -67,10 +67,10 @@
 
         <ion-item >
           <ion-label>
-            <h2>Email Address</h2>
+            <h2 class="word-color">Email</h2>
             <!-- <p>Emmilly</p> -->
 
-            <p>{{user.address}}</p>
+            <p>{{user.email}}</p>
           </ion-label>
           <ion-icon 
             slot="end"
@@ -80,7 +80,7 @@
 
         <ion-item >
           <ion-label>
-            <h2>Age</h2>
+            <h2 class="word-color">Age</h2>
             <!-- <p>Emmilly</p> -->
 
             <p>{{user.age}}</p>
@@ -93,7 +93,7 @@
 
         <ion-item >
           <ion-label>
-            <h2>Sex</h2>
+            <h2 class="word-color">Sex</h2>
             <!-- <p>Emmilly</p> -->
 
             <p>{{user.sex}}</p>
@@ -106,7 +106,7 @@
 
         <ion-item >
           <ion-label>
-            <h2>Nationality</h2>
+            <h2 class="word-color">Nationality</h2>
             <!-- <p>Emmilly</p> -->
 
             <p>{{user.nationality}}</p>
@@ -119,7 +119,7 @@
 
         <ion-item >
           <ion-label>
-            <h2>Linked In Profile</h2>
+            <h2 class="word-color">Linked In Profile</h2>
             <!-- <p>Emmilly</p> -->
 
             <p>{{user.linkedIn}}</p>
@@ -132,7 +132,7 @@
 
         <ion-item >
           <ion-label>
-            <h2>Email Address</h2>
+            <h2 class="word-color">Website Link</h2>
             <!-- <p>Emmilly</p> -->
 
             <p>{{user.email}}</p>
@@ -145,7 +145,7 @@
 
         <ion-item >
           <ion-label>
-            <h2>Email Address</h2>
+            <h2 class="word-color">Medium Link</h2>
             <!-- <p>Emmilly</p> -->
 
             <p>{{user.email}}</p>
@@ -158,7 +158,7 @@
 
         <ion-item >
           <ion-label>
-            <h2>Email Address</h2>
+            <h2 class="word-color">Facebook Link</h2>
             <!-- <p>Emmilly</p> -->
 
             <p>{{user.email}}</p>
@@ -171,111 +171,7 @@
 
         <ion-item >
           <ion-label>
-            <h2>Email Address</h2>
-            <!-- <p>Emmilly</p> -->
-
-            <p>{{user.email}}</p>
-          </ion-label>
-          <ion-icon 
-            slot="end"
-            name="mail"
-          ></ion-icon>
-        </ion-item>
-
-        <ion-item >
-          <ion-label>
-            <h2>Email Address</h2>
-            <!-- <p>Emmilly</p> -->
-
-            <p>{{user.email}}</p>
-          </ion-label>
-          <ion-icon 
-            slot="end"
-            name="mail"
-          ></ion-icon>
-        </ion-item>
-
-        <ion-item >
-          <ion-label>
-            <h2>Email Address</h2>
-            <!-- <p>Emmilly</p> -->
-
-            <p>{{user.email}}</p>
-          </ion-label>
-          <ion-icon 
-            slot="end"
-            name="mail"
-          ></ion-icon>
-        </ion-item>
-
-        <ion-item >
-          <ion-label>
-            <h2>Email Address</h2>
-            <!-- <p>Emmilly</p> -->
-
-            <p>{{user.email}}</p>
-          </ion-label>
-          <ion-icon 
-            slot="end"
-            name="mail"
-          ></ion-icon>
-        </ion-item>
-
-        <ion-item >
-          <ion-label>
-            <h2>Email Address</h2>
-            <!-- <p>Emmilly</p> -->
-
-            <p>{{user.email}}</p>
-          </ion-label>
-          <ion-icon 
-            slot="end"
-            name="mail"
-          ></ion-icon>
-        </ion-item>
-
-        <ion-item >
-          <ion-label>
-            <h2>Email Address</h2>
-            <!-- <p>Emmilly</p> -->
-
-            <p>{{user.email}}</p>
-          </ion-label>
-          <ion-icon 
-            slot="end"
-            name="mail"
-          ></ion-icon>
-        </ion-item>
-
-        <ion-item >
-          <ion-label>
-            <h2>Email Address</h2>
-            <!-- <p>Emmilly</p> -->
-
-            <p>{{user.email}}</p>
-          </ion-label>
-          <ion-icon 
-            slot="end"
-            name="mail"
-          ></ion-icon>
-        </ion-item>
-
-        <ion-item >
-          <ion-label>
-            <h2>Email Address</h2>
-            <!-- <p>Emmilly</p> -->
-
-            <p>{{user.email}}</p>
-          </ion-label>
-          <ion-icon 
-            slot="end"
-            name="mail"
-          ></ion-icon>
-        </ion-item>
-
-        <ion-item >
-          <ion-label>
-            <h2>Email Address</h2>
+            <h2 class="word-color">Other Link</h2>
             <!-- <p>Emmilly</p> -->
 
             <p>{{user.email}}</p>
