updated the design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,7 @@
 
       <ion-menu-toggle>
         <ion-item routerLink="/jobs">
-          <ion-icon  name="mail" slot="start">   </ion-icon>
+          <ion-icon  name="folder-open" slot="start">   </ion-icon>
        
            <ion-label >Jobs</ion-label>
         </ion-item>
@@ -46,7 +46,7 @@
 
       <ion-menu-toggle>
         <ion-item routerLink="/addjob">
-          <ion-icon  name="add" slot="start">   </ion-icon>
+          <ion-icon  name="create" slot="start">   </ion-icon>
        
            <ion-label >Add Job</ion-label>
         </ion-item>
@@ -54,21 +54,15 @@
 
 
       <ion-menu-toggle>
-        <ion-item routerLink="/myapplicantions">
-          <ion-icon  name="mail" slot="start">   </ion-icon>
+        <ion-item routerLink="/myapplications">
+          <ion-icon  name="thumbs-up" slot="start">   </ion-icon>
        
-           <ion-label >Aplicantions</ion-label>
+           <ion-label >Aplications</ion-label>
         </ion-item>
       </ion-menu-toggle>
 
 
-      <ion-menu-toggle>
-        <ion-item routerLink="/profile">
-          <ion-icon  name="mail" slot="start">   </ion-icon>
-       
-           <ion-label >Profile</ion-label>
-        </ion-item>
-      </ion-menu-toggle>
+      
 
 
       <ion-menu-toggle>
@@ -102,6 +96,13 @@
           <ion-icon  name="person-outline" slot="start">   </ion-icon>
        
            <ion-label >Profile</ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+      <ion-menu-toggle>
+        <ion-item routerLink="/login">
+          <ion-icon  name="mail" slot="start">   </ion-icon>
+       
+           <ion-label >Logout</ion-label>
         </ion-item>
       </ion-menu-toggle>     
       
