--- a/src/app/pages/job-detail/job-detail.page.html
+++ b/src/app/pages/job-detail/job-detail.page.html
@@ -12,6 +12,16 @@
   <ion-item *ngFor="let jobdet of jobdetail" >
   <ion-card class="card">
     <ion-card-header>
+      <div class="grid-container">
+        <div class="grid-item"><ion-avatar>
+          <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
+        </ion-avatar></div>
+  <div class="grid-item"><ion-card-title class="card-title">{{jobdet.jobTitle}}</ion-card-title>
+  </div>
+        
+
+      </div>
+      
       <ion-card-title class="card-title">{{jobdet.jobTitle}}</ion-card-title>
       <ion-card-subtitle class="card-subtitle">BY:{{ jobdet.company }}</ion-card-subtitle>
       
