--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,6 +1,17 @@
 
 
+ion-content{
+  --ion-background-color:#33cccc;
+}
 
+.title{
+  font-family: cursive;
+  font-size: larger;
+  color:#1f8611;
+  --background: green;
+
+
+}
 
 .form{
     text-align: center;
